force-app/main/default/objects/Customercenter_CallData__c/fields/OldContractGrade__c.field-meta.xml
<CustomField>
    <fullName>OldContractGrade__c</fullName>
    <label>旧契約等級</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>