force-app/main/default/objects/Customercenter_CallData__c/fields/OldContractInsurancePeriod__c.field-meta.xml
<CustomField>
    <fullName>OldContractInsurancePeriod__c</fullName>
    <label>旧契約保険期間</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未選択</fullName>
                <default>true</default>
                <label>未選択</label>
            </value>
            <value>
                <fullName>１年</fullName>
            </value>
            <value>
                <fullName>短期</fullName>
            </value>
            <value>
                <fullName>長期</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>