force-app/main/default/objects/Customercenter_CallData__c/fields/One_StopShop__c.field-meta.xml
<CustomField>
    <fullName>One_StopShop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ワンストップ</label>
    <type>Checkbox</type>
</CustomField>