force-app/main/default/objects/Customercenter_CallData__c/fields/OpinionRequestFromMyDepartment__c.field-meta.xml
<CustomField>
    <fullName>OpinionRequestFromMyDepartment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自部署意見要望</label>
    <type>Checkbox</type>
</CustomField>