force-app/main/default/objects/Customercenter_CallData__c/fields/Other2__c.field-meta.xml
<CustomField>
    <fullName>Other2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>その他2</label>
    <type>Checkbox</type>
</CustomField>