force-app/main/default/objects/Customercenter_CallData__c/fields/OtherChanges__c.field-meta.xml
<CustomField>
    <fullName>OtherChanges__c</fullName>
    <label>その他変更内容</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>