force-app/main/default/objects/Customercenter_CallData__c/fields/OtherOwner__c.field-meta.xml
<CustomField>
    <fullName>OtherOwner__c</fullName>
    <label>旧契約（他契約）の車両所有者</label>
    <length>10</length>
    <type>Text</type>
</CustomField>