force-app/main/default/objects/Customercenter_CallData__c/fields/OutflowOtherCompanies__c.field-meta.xml
<CustomField>
    <fullName>OutflowOtherCompanies__c</fullName>
    <label>流出他社</label>
    <length>20</length>
    <type>Text</type>
</CustomField>