force-app/main/default/objects/Customercenter_CallData__c/fields/OwnDepartmentComplaints__c.field-meta.xml
<CustomField>
    <fullName>OwnDepartmentComplaints__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自部署苦情</label>
    <type>Checkbox</type>
</CustomField>