force-app/main/default/objects/Customercenter_CallData__c/fields/OwnerName__c.field-meta.xml
<CustomField>
    <fullName>OwnerName__c</fullName>
    <label>所有者名義</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未選択</fullName>
                <default>true</default>
                <label>未選択</label>
            </value>
            <value>
                <fullName>入替可</fullName>
            </value>
            <value>
                <fullName>入替不可</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>