force-app/main/default/objects/Customercenter_CallData__c/fields/OwnerVehicleInspectionCertificate__c.field-meta.xml
<CustomField>
    <fullName>OwnerVehicleInspectionCertificate__c</fullName>
    <label>車検証記載の車両所有者</label>
    <length>10</length>
    <type>Text</type>
</CustomField>