force-app/main/default/objects/Customercenter_CallData__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <label>払込方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未選択</fullName>
                <default>true</default>
                <label>未選択</label>
            </value>
            <value>
                <fullName>一括(年)</fullName>
            </value>
            <value>
                <fullName>分割(月)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>