force-app/main/default/objects/Customercenter_CallData__c/fields/PersonInChargeOfRegistration__c.field-meta.xml
<CustomField>
    <fullName>PersonInChargeOfRegistration__c</fullName>
    <label>登録担当者</label>
    <length>20</length>
    <type>Text</type>
</CustomField>