force-app/main/default/objects/Customercenter_CallData__c/fields/Policyholder_SAddressInKana__c.field-meta.xml
<CustomField>
    <fullName>Policyholder_SAddressInKana__c</fullName>
    <label>契約者住所カナ</label>
    <length>80</length>
    <type>Text</type>
</CustomField>