force-app/main/default/objects/Customercenter_CallData__c/fields/PostCode__c.field-meta.xml
<CustomField>
    <fullName>PostCode__c</fullName>
    <label>郵便番号（ハイフン不要)</label>
    <length>7</length>
    <type>Text</type>
</CustomField>