force-app/main/default/objects/Customercenter_CallData__c/fields/PrintSerialNumber__c.field-meta.xml
<CustomField>
    <fullName>PrintSerialNumber__c</fullName>
    <label>印刷連番</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>