force-app/main/default/objects/Customercenter_CallData__c/fields/PurchaseAmount__c.field-meta.xml
<CustomField>
    <fullName>PurchaseAmount__c</fullName>
    <label>購入額（万円）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>