force-app/main/default/objects/Customercenter_CallData__c/fields/PurchaseCategory__c.field-meta.xml
<CustomField>
    <fullName>PurchaseCategory__c</fullName>
    <label>購入区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>区分A</fullName>
            </value>
            <value>
                <fullName>区分B</fullName>
            </value>
            <value>
                <fullName>区分C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>