force-app/main/default/objects/Customercenter_CallData__c/fields/Re_Issuance_PersonInCharge__c.field-meta.xml
<CustomField>
    <fullName>Re_Issuance_PersonInCharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>再発行_担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Re_Issuance_PersonInCharge_relation_old</relationshipName>
    <type>Lookup</type>
</CustomField>