force-app/main/default/objects/Customercenter_CallData__c/fields/Receptionist__c.field-meta.xml
<CustomField>
    <fullName>Receptionist__c</fullName>
    <label>受付担当者</label>
    <length>10</length>
    <type>Text</type>
</CustomField>