force-app/main/default/objects/Customercenter_CallData__c/fields/ReceptionType__c.field-meta.xml
<CustomField>
    <fullName>ReceptionType__c</fullName>
    <label>受付種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>電話</fullName>
                <default>true</default>
                <label>電話</label>
            </value>
            <value>
                <fullName>メール</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>