force-app/main/default/objects/Customercenter_CallData__c/fields/ReceptionWindowName__c.field-meta.xml
<CustomField>
    <fullName>ReceptionWindowName__c</fullName>
    <label>受付窓口名</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>受付窓口名1</fullName>
            </value>
            <value>
                <fullName>受付窓口名2</fullName>
            </value>
            <value>
                <fullName>受付窓口名3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>