force-app/main/default/objects/Customercenter_CallData__c/fields/RecipientName__c.field-meta.xml
<CustomField>
    <fullName>RecipientName__c</fullName>
    <label>計上待ち相手先名</label>
    <length>10</length>
    <type>Text</type>
</CustomField>