force-app/main/default/objects/Customercenter_CallData__c/fields/RegisteredBusinessGroup__c.field-meta.xml
<CustomField>
    <fullName>RegisteredBusinessGroup__c</fullName>
    <label>登録業務グループ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>信金窓販</fullName>
            </value>
            <value>
                <fullName>予備1</fullName>
            </value>
            <value>
                <fullName>予備2</fullName>
            </value>
            <value>
                <fullName>予備3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>