force-app/main/default/objects/Customercenter_CallData__c/fields/RegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>RegistrationDate__c</fullName>
    <label>登録日時</label>
    <type>DateTime</type>
</CustomField>