force-app/main/default/objects/Customercenter_CallData__c/fields/Reissue_Today__c.field-meta.xml
<CustomField>
    <fullName>Reissue_Today__c</fullName>
    <defaultValue>false</defaultValue>
    <label>再発行_本日</label>
    <type>Checkbox</type>
</CustomField>