force-app/main/default/objects/Customercenter_CallData__c/fields/Reissue_Type__c.field-meta.xml
<CustomField>
    <fullName>Reissue_Type__c</fullName>
    <label>再発行_型</label>
    <length>3</length>
    <type>Text</type>
</CustomField>