force-app/main/default/objects/Customercenter_CallData__c/fields/RelatedCallNumber__c.field-meta.xml
<CustomField>
    <fullName>RelatedCallNumber__c</fullName>
    <label>関連コール番号</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>