force-app/main/default/objects/Customercenter_CallData__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>契約者と入電者の関係</label>
    <length>5</length>
    <type>Text</type>
</CustomField>