force-app/main/default/objects/Customercenter_CallData__c/fields/Remarks_QualityControl__c.field-meta.xml
<CustomField>
    <fullName>Remarks_QualityControl__c</fullName>
    <label>備考（品質管理）</label>
    <length>50</length>
    <type>Text</type>
</CustomField>