force-app/main/default/objects/Customercenter_CallData__c/fields/ReplacementCarCostPerDay__c.field-meta.xml
<CustomField>
    <fullName>ReplacementCarCostPerDay__c</fullName>
    <label>代車費用日額（円）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未選択</fullName>
                <default>true</default>
                <label>未選択</label>
            </value>
            <value>
                <fullName>5000</fullName>
            </value>
            <value>
                <fullName>7000</fullName>
            </value>
            <value>
                <fullName>10000</fullName>
            </value>
            <value>
                <fullName>15000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>