force-app/main/default/objects/Customercenter_CallData__c/fields/ReplacementCarModel__c.field-meta.xml
<CustomField>
    <fullName>ReplacementCarModel__c</fullName>
    <label>入替車種</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未選択</fullName>
                <default>true</default>
                <label>未選択</label>
            </value>
            <value>
                <fullName>範囲内</fullName>
            </value>
            <value>
                <fullName>範囲外</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>