force-app/main/default/objects/Customercenter_CallData__c/fields/ResentDocuments__c.field-meta.xml
<CustomField>
    <fullName>ResentDocuments__c</fullName>
    <label>再送付書類</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_content</valueSetName>
    </valueSet>
</CustomField>