force-app/main/default/objects/Customercenter_CallData__c/fields/Respondent__c.field-meta.xml
<CustomField>
    <fullName>Respondent__c</fullName>
    <label>回答担当者</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>テスト1</fullName>
            </value>
            <value>
                <fullName>テスト2</fullName>
            </value>
            <value>
                <fullName>テスト3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>