force-app/main/default/objects/Customercenter_CallData__c/fields/ResponseDetails__c.field-meta.xml
<CustomField>
    <fullName>ResponseDetails__c</fullName>
    <label>回答詳細</label>
    <type>TextArea</type>
</CustomField>