force-app/main/default/objects/Customercenter_CallData__c/fields/Return_ReturnedDocuments__c.field-meta.xml
<CustomField>
    <fullName>Return_ReturnedDocuments__c</fullName>
    <label>再返送書類</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Returned_documents_etc</valueSetName>
    </valueSet>
</CustomField>