force-app/main/default/objects/Customercenter_CallData__c/fields/ReturnedDocuments__c.field-meta.xml
<CustomField>
    <fullName>ReturnedDocuments__c</fullName>
    <label>返送書類</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Returned_documents_etc</valueSetName>
    </valueSet>
</CustomField>