force-app/main/default/objects/Customercenter_CallData__c/fields/ReturnedDocuments_Other_Fields__c.field-meta.xml
<CustomField>
    <fullName>ReturnedDocuments_Other_Fields__c</fullName>
    <label>返送書類_その他_記入欄</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>