force-app/main/default/objects/Customercenter_CallData__c/fields/Returneddocuments_Other_Fields_to_be_fil__c.field-meta.xml
<CustomField>
    <fullName>Returneddocuments_Other_Fields_to_be_fil__c</fullName>
    <label>返送書類_その他_記入欄</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>