force-app/main/default/objects/Customercenter_CallData__c/fields/ReturnFollow_UpDate_Latest__c.field-meta.xml
<CustomField>
    <fullName>ReturnFollow_UpDate_Latest__c</fullName>
    <label>返送フォロー日（最新）</label>
    <type>Date</type>
</CustomField>