force-app/main/default/objects/Customercenter_CallData__c/fields/ReturnFollow_UpDate_Selected__c.field-meta.xml
<CustomField>
    <fullName>ReturnFollow_UpDate_Selected__c</fullName>
    <label>返送フォロー日（選択）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FollowSelectionList</valueSetName>
    </valueSet>
</CustomField>