force-app/main/default/objects/Customercenter_CallData__c/fields/SendingDocuments_Other_Fields__c.field-meta.xml
<CustomField>
    <fullName>SendingDocuments_Other_Fields__c</fullName>
    <label>送付書類_その他_記入欄</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>