force-app/main/default/objects/Customercenter_CallData__c/fields/SettlementDate__c.field-meta.xml
<CustomField>
    <fullName>SettlementDate__c</fullName>
    <label>精算日</label>
    <type>Date</type>
</CustomField>