force-app/main/default/objects/Customercenter_CallData__c/fields/ShipmentRequired__c.field-meta.xml
<CustomField>
    <fullName>ShipmentRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>発送要</label>
    <type>Checkbox</type>
</CustomField>