force-app/main/default/objects/Customercenter_CallData__c/fields/SmallCancellationRefund_NoRefund_Input__c.field-meta.xml
<CustomField>
    <fullName>SmallCancellationRefund_NoRefund_Input__c</fullName>
    <label>解約返戻金少額（返戻金なし）注意喚起_記入欄</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>