force-app/main/default/objects/Customercenter_CallData__c/fields/SmallCancellationRefund_NoRefund_Reminde__c.field-meta.xml
<CustomField>
    <fullName>SmallCancellationRefund_NoRefund_Reminde__c</fullName>
    <defaultValue>false</defaultValue>
    <label>解約返戻金少額（返戻金なし）注意喚起</label>
    <type>Checkbox</type>
</CustomField>