force-app/main/default/objects/Customercenter_CallData__c/fields/Specification__c.field-meta.xml
<CustomField>
    <fullName>Specification__c</fullName>
    <label>仕様（グレード＠半角20文字まで）</label>
    <length>20</length>
    <type>Text</type>
</CustomField>