force-app/main/default/objects/Customercenter_CallData__c/fields/SpecifiedDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>SpecifiedDateAndTime__c</fullName>
    <label>指定日時</label>
    <type>DateTime</type>
</CustomField>