force-app/main/default/objects/Customercenter_CallData__c/fields/Spouse__c.field-meta.xml
<CustomField>
    <fullName>Spouse__c</fullName>
    <label>配偶者（年齢）</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>