force-app/main/default/objects/Customercenter_CallData__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>事故受付対応</fullName>
            </value>
            <value>
                <fullName>FAX対応</fullName>
            </value>
            <value>
                <fullName>見積りの受付</fullName>
            </value>
            <value>
                <fullName>更改申込書作成</fullName>
            </value>
            <value>
                <fullName>富国生命職員より入電</fullName>
            </value>
            <value>
                <fullName>異動の受付</fullName>
            </value>
            <value>
                <fullName>承認請求書の作成</fullName>
            </value>
            <value>
                <fullName>試算内容のセルフチェック</fullName>
            </value>
            <value>
                <fullName>見積書の作成</fullName>
            </value>
            <value>
                <fullName>試算回答のFAX送信</fullName>
            </value>
            <value>
                <fullName>保険料の案内</fullName>
            </value>
            <value>
                <fullName>申込書の作成と発送</fullName>
            </value>
            <value>
                <fullName>作成書類のセルフチェック</fullName>
            </value>
            <value>
                <fullName>作成書類の二次チェック</fullName>
            </value>
            <value>
                <fullName>作成書類の引き渡し・プレコール準備</fullName>
            </value>
            <value>
                <fullName>入電対応</fullName>
            </value>
            <value>
                <fullName>SVへの承認依頼</fullName>
            </value>
            <value>
                <fullName>コールクローズ処理</fullName>
            </value>
            <value>
                <fullName>当日コールのチェック</fullName>
            </value>
            <value>
                <fullName>所変更受付のデータ抽出および計上エントリー</fullName>
            </value>
            <value>
                <fullName>オンライン計上</fullName>
            </value>
            <value>
                <fullName>コールの内容確認</fullName>
            </value>
            <value>
                <fullName>計上チェック</fullName>
            </value>
            <value>
                <fullName>計上チェック・発送チェック</fullName>
            </value>
            <value>
                <fullName>対応依頼票FAXの返信</fullName>
            </value>
            <value>
                <fullName>再送FAXを送信</fullName>
            </value>
            <value>
                <fullName>シュレッダー処理</fullName>
            </value>
            <value>
                <fullName>電話申込受付（Ｔ加入）</fullName>
            </value>
            <value>
                <fullName>プレコール</fullName>
            </value>
            <value>
                <fullName>「変更手続き完了のお知らせ（承認書）」の発送</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>