force-app/main/default/objects/Customercenter_CallData__c/fields/StopEitsuguish_Stop_DateOfReceipt__c.field-meta.xml
<CustomField>
    <fullName>StopEitsuguish_Stop_DateOfReceipt__c</fullName>
    <label>自継停止_受付日</label>
    <type>Date</type>
</CustomField>