force-app/main/default/objects/Customercenter_CallData__c/fields/Subscriber_SKanjiAddress__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_SKanjiAddress__c</fullName>
    <label>契約者住所漢字</label>
    <length>64</length>
    <type>Text</type>
</CustomField>