force-app/main/default/objects/Customercenter_CallData__c/fields/SuspensionOfJiketsuSuspensionItem_Suspen__c.field-meta.xml
<CustomField>
    <fullName>SuspensionOfJiketsuSuspensionItem_Suspen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自継停止項目_自継停止</label>
    <type>Checkbox</type>
</CustomField>