force-app/main/default/objects/Customercenter_CallData__c/fields/SuspensionOfSuccession_DeathCancellation__c.field-meta.xml
<CustomField>
    <fullName>SuspensionOfSuccession_DeathCancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自継停止項目_死亡解約</label>
    <type>Checkbox</type>
</CustomField>