force-app/main/default/objects/Customercenter_CallData__c/fields/TerminationCompletion_PersonInCharge__c.field-meta.xml
<CustomField>
    <fullName>TerminationCompletion_PersonInCharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>解約完了_担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TerminationCompletion_PersonInCharge_old</relationshipName>
    <type>Lookup</type>
</CustomField>