force-app/main/default/objects/Customercenter_CallData__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>タイトル</label>
    <length>50</length>
    <type>Text</type>
</CustomField>