force-app/main/default/objects/Customercenter_CallData__c/fields/TransferDate__c.field-meta.xml
<CustomField>
    <fullName>TransferDate__c</fullName>
    <label>移管日</label>
    <type>Date</type>
</CustomField>