force-app/main/default/objects/Customercenter_CallData__c/fields/Tue_Shin_NewChange_PersonInCharge__c.field-meta.xml
<CustomField>
    <fullName>Tue_Shin_NewChange_PersonInCharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>火新異動_担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Re_Issuance_PersonInCharge_old</relationshipName>
    <type>Lookup</type>
</CustomField>